Complete local log export review fixes